<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/main_padding"
        app:constraint_referenced_ids="image1,txt1"
        app:flow_horizontalStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/remove"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_manage_search_24"
        app:layout_constraintStart_toStartOf="parent"
             />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/main_padding"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/add" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/remove"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="image2,txt2"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        app:flow_horizontalStyle="packed"
        android:padding="@dimen/main_padding"
        app:layout_constraintTop_toBottomOf="@+id/add"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_playlist_remove_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/main_padding"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/remove" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/copy"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        app:flow_horizontalStyle="packed"
        android:padding="@dimen/main_padding"
        app:constraint_referenced_ids="image3,txt3"
        app:layout_constraintTop_toBottomOf="@+id/remove"/>

        <ImageView
            android:id="@+id/image3"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/main_padding"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/copy" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/cancel"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        app:flow_horizontalStyle="packed"
        app:constraint_referenced_ids="image4,txt4"
        android:padding="@dimen/main_padding"
        app:layout_constraintTop_toBottomOf="@+id/copy"/>

        <ImageView
            android:id="@+id/image4"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_cancel_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/main_padding"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>